--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This project is a set of functions with their corresponding test. Tests are written with Jest.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watch tests/*"
   },
   "repository": {
     "type": "git",
